# meeting-scheduler-mcp

./: .env.example  .env.test  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
src/meeting_scheduler_mcp/: __init__.py  __main__.py  calendar.py  holidays.py  mail.py  tools.py
tests/: conftest.py  test_calendar_manager.py  test_holidays.py  test_imap_client.py  test_integration.py  test_mcp_tools.py  test_models.py  test_slot_finder.py
